[gd_scene load_steps=16 format=3 uid="uid://d1606cgleh1lq"]

[ext_resource type="Script" uid="uid://f84dlwse8y3k" path="res://Game/UserInterface/education_modal.gd" id="1_77m5n"]
[ext_resource type="Theme" uid="uid://c71vkmso5xu4b" path="res://Resources/panel-dark-theme.tres" id="2_lnren"]
[ext_resource type="Script" uid="uid://dbap0gqox0ty1" path="res://addons/markdownlabel/markdownlabel.gd" id="3_15u4o"]
[ext_resource type="Script" uid="uid://dcx7crs23nf4" path="res://addons/markdownlabel/header_formats/h1_format.gd" id="4_ek03d"]
[ext_resource type="Script" uid="uid://d0sin64i4v3op" path="res://addons/markdownlabel/header_formats/h2_format.gd" id="5_iyygo"]
[ext_resource type="Script" uid="uid://dlok0dv1tq2bf" path="res://addons/markdownlabel/header_formats/h3_format.gd" id="6_ic8s0"]
[ext_resource type="Script" uid="uid://bayuh2vafablg" path="res://addons/markdownlabel/header_formats/h4_format.gd" id="7_cg2r8"]
[ext_resource type="Script" uid="uid://dfr1w7u3jgni3" path="res://addons/markdownlabel/header_formats/h5_format.gd" id="8_q7412"]
[ext_resource type="Script" uid="uid://bsi6dexoofpe6" path="res://addons/markdownlabel/header_formats/h6_format.gd" id="9_l80q3"]

[sub_resource type="Resource" id="Resource_iifv5"]
resource_local_to_scene = true
script = ExtResource("4_ek03d")
font_size = 2.285
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_25vey"]
resource_local_to_scene = true
script = ExtResource("5_iyygo")
font_size = 1.714
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_k2tek"]
resource_local_to_scene = true
script = ExtResource("6_ic8s0")
font_size = 1.428
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_mm347"]
resource_local_to_scene = true
script = ExtResource("7_cg2r8")
font_size = 1.142
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_r2377"]
resource_local_to_scene = true
script = ExtResource("8_q7412")
font_size = 1.0
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[sub_resource type="Resource" id="Resource_a2gc0"]
resource_local_to_scene = true
script = ExtResource("9_l80q3")
font_size = 0.857
is_bold = false
is_italic = false
is_underlined = false
override_font_color = false
font_color = Color(1, 1, 1, 1)

[node name="EducationModal" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_77m5n")

[node name="Panel" type="Panel" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_lnren")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="TitleRichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true

[node name="MarkdownLabel" type="RichTextLabel" parent="Panel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
script = ExtResource("3_15u4o")
h1 = SubResource("Resource_iifv5")
h2 = SubResource("Resource_25vey")
h3 = SubResource("Resource_k2tek")
h4 = SubResource("Resource_mm347")
h5 = SubResource("Resource_r2377")
h6 = SubResource("Resource_a2gc0")
metadata/_custom_type_script = "uid://dbap0gqox0ty1"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
